# hackpi

./: .gitignore  AGENTS.MD  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  bash-tool.spec.md  hashline.spec.md  install.sh  read-tool.spec.md  tui.spec.md  write-tool.spec.md
.github/workflows/: tui-tests.yml
.serena/: project.yml
docs/explanation/: architecture.md  hash-anchors.md  security-model.md
docs/how-to/: configure-guardrails.md  connect-llm.md  edit-files.md
docs/reference/: environment-variables.md  guardrails.md  key-bindings.md  tools.md
docs/research/: testing-harness.md
docs/superpowers/plans/: 2026-05-15-hackpi-implementation.md
docs/tutorials/: getting-started.md
hackpi-core/: Cargo.toml
hackpi-core/src/: agent.rs  api.rs  lib.rs  system_prompt.rs  tools.rs  types.rs
hackpi-core/src/agent/: api.rs  conversation.rs  events.rs  mod.rs  state.rs  tool_dispatch.rs
hackpi-core/tests/: integration_test.rs
hackpi-guardrails/: Cargo.toml
hackpi-guardrails/src/: command_gate.rs  config.rs  evaluator.rs  file_protection.rs  hot_reload.rs  interceptor.rs  lib.rs  path_guard.rs  pattern.rs  vcs_operation_gate.rs
hackpi-guardrails/src/command_gate/: evaluator.rs  matcher.rs  mod.rs  rules.rs
hackpi-guardrails/src/config/: claude_code.rs  hot_reload.rs  loading.rs  mod.rs  parsing.rs  structs.rs  validation.rs
hackpi-guardrails/src/pattern/: evaluator.rs  glob.rs  mod.rs  parsing.rs  regex.rs
hackpi-guardrails/tests/: integration.rs
hackpi-guardrails/tests/common/: mod.rs
hackpi-tasks/: Cargo.toml
hackpi-tasks/src/: agent_profile.rs  lib.rs  meta.rs  slash.rs  store.rs  task.rs  tool.rs  workflow.rs
hackpi-tasks/src/slash/: commands.rs  formatting.rs  mod.rs  parsing.rs
hackpi-tasks/src/store/: crud.rs  json_store.rs  mod.rs  query.rs  traits.rs  transitions.rs
hackpi-tasks/src/tool/: execution.rs  formatting.rs  mod.rs  registry.rs  schemas.rs
hackpi-tasks/src/workflow/: mod.rs  profile.rs  transitions.rs  validation.rs
hackpi-tools/: Cargo.toml
hackpi-tools/src/: bash.rs  chunker.rs  edit.rs  lib.rs  path_jail.rs  read.rs  search_bm25.rs  search_grep.rs  write.rs
hackpi-tools/src/bash/: commands.rs  filesystem.rs  mod.rs  parser.rs  session.rs  tests.rs  tool.rs
hackpi-tools/src/bash/filesystem/: memory.rs  mod.rs  path.rs  traits.rs
hackpi-tools/src/bash/tests/: builtins.rs  errors.rs  filesystem.rs  mod.rs  pipeline.rs  variables.rs
hackpi-tools/src/edit/: anchor.rs  hash.rs  mod.rs  ops.rs  tests.rs  tool.rs
hackpi-tools/src/search_bm25/: index.rs  mod.rs  query.rs  scoring.rs  tokenizer.rs
hackpi-tools/src/search_grep/: filter.rs  mod.rs  search.rs  tool.rs
hackpi-tui/: Cargo.toml  hackpi-export-1779282044.txt  hackpi-export-1779282766.txt  hackpi-export-1779300120.txt  hackpi-export-1779300923.txt  hackpi-export-1779301009.txt
hackpi-tui/src/: app.rs  events.rs  input.rs  interaction.rs  lib.rs  main.rs  script.rs  structured.rs  theme.rs  ui.rs
hackpi-tui/src/app/: commands.rs  conversation.rs  mod.rs  permissions.rs  state.rs
hackpi-tui/src/script/: assertions.rs  loader.rs  mod.rs  runner.rs
hackpi-tui/src/ui/: conversation.rs  diagnostics.rs  input.rs  layout.rs  mod.rs  modals.rs  snapshots.rs  status.rs  task_board.rs
hackpi-vcs/: Cargo.toml
hackpi-vcs/src/: config.rs  git_read.rs  git_write.rs  github.rs  github_api.rs  lib.rs
hackpi-vcs/src/git_read/: blame.rs  diff.rs  log.rs  mod.rs  status.rs
hackpi-vcs/src/git_write/: branch.rs  git_write_tool.rs  history.rs  mod.rs  remote.rs  staging.rs
hackpi-vcs/src/github/: branches.rs  ci.rs  comments.rs  mod.rs  pr_workflow.rs
hackpi-vcs/src/github_api/: client.rs  issues.rs  mod.rs  prs.rs  releases.rs  types.rs
hackpi-vcs/tests/: integration.rs
issues/: ISSUE_01.md  ISSUE_02.md  ISSUE_03.md  ISSUE_04.md  ISSUE_05.md  ISSUE_06.md  ISSUE_07.md  ISSUE_08.md  ISSUE_09.md  ISSUE_10.md  ISSUE_11.md  ISSUE_12.md  ISSUE_13.md  ISSUE_14.md  ISSUE_15.md  ISSUE_16.md  ISSUE_17.md  ISSUE_18.md  ISSUE_19.md  ISSUE_20.md
tests/scenarios/: autocomplete-ctrlc.json  autocomplete-ctrll.json  autocomplete-enter-select.json  autocomplete-esc.json  autocomplete-filter.json  autocomplete-show.json  autocomplete-tab-select.json  global-ctrlc-interrupt.json  global-ctrld-exit.json  global-ctrll-clear.json  help-and-clear.json  input-cjk.json  input-submit-clears.json  input-typing.json  slash-clear.json  slash-export-custom.json  slash-export.json  slash-guardrails-clean.json  slash-guardrails-onboarding.json  slash-guardrails-status.json  slash-help.json  slash-quit.json  view-enter-taskboard.json  view-esc-back.json  view-esc-conversation.json  view-tab-cycles.json
