[workspace]
members = ["hackpi-core", "hackpi-tools", "hackpi-tui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
anyhow = "1"
xxhash-rust = { version = "0.8", features = ["xxh32"] }
grep-searcher = "0.1"
grep-regex = "0.1"
globset = "0.4"
ratatui = "0.28"
crossterm = "0.28"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
