[package]
name = "hackpi-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
futures.workspace = true
tracing.workspace = true
hackpi-guardrails = { path = "../hackpi-guardrails" }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

