[package]
name = "hackpi-guardrails"
version.workspace = true
edition.workspace = true

[dependencies]
hackpi-core = { path = "../hackpi-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
globset.workspace = true
home = "0.5"
tokio = { version = "1", features = ["fs", "sync"] }
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
