[package]
name = "hackpi-guardrails"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
globset.workspace = true
home = "0.5"
notify = "7"
tokio = { version = "1", features = ["fs", "sync", "time", "rt"] }
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
