[package]
name = "hackpi-tasks"
version.workspace = true
edition.workspace = true

[dependencies]
hackpi-core = { path = "../hackpi-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio = { version = "1", features = ["fs", "sync", "rt", "macros"] }
async-trait.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
