[package]
name = "hackpi-tasks"
version.workspace = true
edition.workspace = true

[dependencies]
hackpi-core = { path = "../hackpi-core" }
serde.workspace = true
serde_json.workspace = true
serde_yml = "0.0.12"
tokio = { version = "1", features = ["fs", "sync", "rt", "macros"] }
async-trait.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
fs2.workspace = true

[dev-dependencies]
tempfile = "3"
