[package]
name = "hackpi-tui"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tracing.workspace = true
futures.workspace = true
hackpi-core = { path = "../hackpi-core" }
