[package]
name = "hackpi-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hackpi"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
hackpi-core = { path = "../hackpi-core" }
hackpi-tools = { path = "../hackpi-tools" }
hackpi-guardrails = { path = "../hackpi-guardrails" }
